# ARK-Shelf-Desktop

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml  rust.yml
app/: .gitignore  App.tsx  craco.config.js  index.tsx  package.json
app/components/: LinkCard.tsx
app/src/: App.tsx  types.ts
app/src/components/: LinkCard.tsx
core/: Cargo.toml  tauri.conf.json
core/src/: cli.rs  main.rs
core/src/base/: link.rs  mod.rs
core/src/command/: mod.rs
src/: .eslintrc.json  App.svelte  main.ts  store.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  main.rs
src-tauri/src/base/: mod.rs
src-tauri/src/command/: errors.rs  mod.rs  subcommand.rs
src/components/: Description.svelte  Form.svelte  LinkCard.svelte  LinkFooter.svelte  Score.svelte  Scores.svelte  Title.svelte  utils.ts
