[package]
name = "ark-shelf-desktop"
version = "0.1.0"
description = "ARK Shelf Rusty-core"
authors = ["Jerry Wong <yuki.n@tuta.io>"]
license = "MIT"
# default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
tauri = { version = "1.0.3", features = ["api-all"] }
clap = { version = "3.2.8", features = ["derive"] }
home = "0.5.3"
url = { version = "2.2.2", features = ["serde"] }
zip = "0.6.2"
scraper = "0.13.0"
tauri-macros = "1.0.3"
walkdir = "2.3.2"
anyhow = "1.0.58"
reqwest = "0.11.11"
arklib = { git = "https://github.com/hhio618/arklib", rev = "ad81445" }
notify = "4.0.17"
tokio = { version = "1.19.2", features = ["full"] }
crossbeam-channel = "0.5.5"
lazy_static = "1.4.0"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
